# PFT-SR

./: docker-compose.yaml  main.py  pyproject.toml
utils/: __init__.py  inference.py  model.py  patch_processor.py  patch_settings_gui.py  roi_selector.py
