[project]
name = "pft-sr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "addict>=2.4.0",
    "fairscale>=0.4.13",
    "future>=1.0.0",
    "lmdb>=1.7.5",
    "numpy>=1.17",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "tb-nightly>=2.21.0a20251023",
    "torch==2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "yapf>=0.43.0",
]
